[gd_scene load_steps=11 format=3 uid="uid://c3b382m1r7jes"]

[ext_resource type="Script" uid="uid://crr6mw5nleyry" path="res://scripts/fase_2_3.gd" id="1_mo007"]
[ext_resource type="Texture2D" uid="uid://dnjia0bbruoni" path="res://assets/backgrounds/fundo jogo.png" id="2_rsgam"]
[ext_resource type="Texture2D" uid="uid://bmxeirivvp3th" path="res://assets/btn.png" id="3_5u4hw"]
[ext_resource type="AudioStream" uid="uid://dlfim2ja4ogdy" path="res://assets/audios/Som-de-clique-de-mouse-Efeito-Sonoro.ogg" id="4_n2aej"]
[ext_resource type="Texture2D" uid="uid://cbx21x5lk1f2n" path="res://assets/explicacao.png" id="4_v8u2f"]
[ext_resource type="Texture2D" uid="uid://n2nyl5aulady" path="res://assets/b.png" id="5_q1opf"]
[ext_resource type="Texture2D" uid="uid://duvufuhqp3xuo" path="res://assets/fase23.png" id="6_q1opf"]
[ext_resource type="Texture2D" uid="uid://b520fpjml6888" path="res://assets/continuar.png" id="7_k7d85"]
[ext_resource type="Texture2D" uid="uid://bgjymdob6np7o" path="res://assets/alternativa.png" id="8_dbxf3"]
[ext_resource type="Texture2D" uid="uid://p4jhd6e5nf76" path="res://assets/recomecar.png" id="8_fehjd"]

[node name="Fase23" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mo007")

[node name="fundo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 646.0
texture = ExtResource("2_rsgam")

[node name="explicacao_container" type="Panel" parent="."]
layout_mode = 0
offset_left = -41.0
offset_top = -39.0
offset_right = -1.0
offset_bottom = 1.0

[node name="titulo_label" type="TextureRect" parent="explicacao_container"]
layout_mode = 0
offset_left = 74.0
offset_top = 62.0
offset_right = 401.0
offset_bottom = 132.0
texture = ExtResource("3_5u4hw")

[node name="TextureRect" type="TextureRect" parent="explicacao_container/titulo_label"]
layout_mode = 0
offset_left = 44.0
offset_top = 6.0
offset_right = 277.0
offset_bottom = 51.0
texture = ExtResource("4_v8u2f")

[node name="texto_label" type="TextureRect" parent="explicacao_container"]
layout_mode = 0
offset_left = 70.0
offset_top = 171.0
offset_right = 1159.0
offset_bottom = 512.0
texture = ExtResource("5_q1opf")

[node name="TextureRect" type="TextureRect" parent="explicacao_container/texto_label"]
layout_mode = 0
offset_left = 14.0
offset_top = 22.0
offset_right = 1094.0
offset_bottom = 299.0
texture = ExtResource("6_q1opf")

[node name="button_continuar" type="TextureButton" parent="explicacao_container"]
layout_mode = 0
offset_left = 462.0
offset_top = 523.0
offset_right = 720.0
offset_bottom = 601.0
texture_normal = ExtResource("3_5u4hw")

[node name="TextureRect" type="TextureRect" parent="explicacao_container/button_continuar"]
layout_mode = 0
offset_left = 48.0
offset_top = 7.0
offset_right = 218.0
offset_bottom = 47.0
texture = ExtResource("7_k7d85")

[node name="quiz_container" type="Panel" parent="."]
layout_mode = 0
offset_left = -43.0
offset_top = -39.0
offset_right = -3.0
offset_bottom = 1.0

[node name="opcoes_container" type="VBoxContainer" parent="quiz_container"]
layout_mode = 0
offset_left = 459.0
offset_top = 245.0
offset_right = 531.0
offset_bottom = 468.0

[node name="opcao_1" type="TextureButton" parent="quiz_container/opcoes_container"]
layout_mode = 2
texture_normal = ExtResource("8_dbxf3")

[node name="label" type="Label" parent="quiz_container/opcoes_container/opcao_1"]
layout_mode = 0
offset_left = 90.0
offset_top = 11.0
offset_right = 130.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22

[node name="opcao_2" type="TextureButton" parent="quiz_container/opcoes_container"]
layout_mode = 2
texture_normal = ExtResource("8_dbxf3")

[node name="label" type="Label" parent="quiz_container/opcoes_container/opcao_2"]
layout_mode = 0
offset_left = 86.0
offset_top = 10.0
offset_right = 126.0
offset_bottom = 41.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22

[node name="opcao_3" type="TextureButton" parent="quiz_container/opcoes_container"]
layout_mode = 2
texture_normal = ExtResource("8_dbxf3")

[node name="label" type="Label" parent="quiz_container/opcoes_container/opcao_3"]
layout_mode = 0
offset_left = 88.0
offset_top = 9.0
offset_right = 128.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22

[node name="feedback_label" type="Label" parent="quiz_container"]
layout_mode = 0
offset_left = 897.0
offset_top = 275.0
offset_right = 937.0
offset_bottom = 298.0

[node name="button_continuar" type="TextureButton" parent="quiz_container"]
layout_mode = 0
offset_left = 914.0
offset_top = 525.0
offset_right = 1172.0
offset_bottom = 595.0
texture_normal = ExtResource("3_5u4hw")

[node name="TextureRect" type="TextureRect" parent="quiz_container/button_continuar"]
layout_mode = 0
offset_left = 40.0
offset_top = 5.0
offset_right = 210.0
offset_bottom = 45.0
texture = ExtResource("7_k7d85")

[node name="button_restart" type="TextureButton" parent="quiz_container"]
layout_mode = 0
offset_left = 913.0
offset_top = 523.0
offset_right = 1171.0
offset_bottom = 593.0
texture_normal = ExtResource("8_fehjd")

[node name="TextureRect" type="TextureRect" parent="quiz_container"]
layout_mode = 0
offset_left = 188.0
offset_top = 60.0
offset_right = 1112.0
offset_bottom = 165.0
texture = ExtResource("5_q1opf")

[node name="pergunta_label" type="Label" parent="quiz_container/TextureRect"]
layout_mode = 0
offset_left = 63.0
offset_top = 28.0
offset_right = 766.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_n2aej")

[node name="Narracao" type="AudioStreamPlayer2D" parent="."]
